--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ button:focus {
 .form-container {
   display: grid;
   grid-template-columns: 1fr;
-  column-gap: 10px; /* Optional: add space between forms */
+  gap: 10px; /* Optional: add space between forms */
   width: 300px; /* Optional: set a fixed width for the forms */
   margin: 0 auto;
 }
@@ -188,7 +188,7 @@ button:focus {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 10px;
+  gap: 10px;
   padding: 20px;
 }
 
